removed has selector for browser incompatibility

--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
               
             </nav>
             <nav class="mobile-nav">
-                <label class="hamburger-menu">
-                    <input type="checkbox">
-                </label>
+                <input type="checkbox" id="hamburger-checkbox">
+                <label class="hamburger-menu" for="hamburger-checkbox"></label>
                 <ul class="mobile-nav-link">
                     <li><a href="#">Products</a></li>
                     <li><a href="#">Services</a></li>
